Fix header z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -76,6 +76,7 @@ body {
   width: 100%;
   background-color: white;
   top: 0;
+  z-index: 200;
 }
 
 .wrapper {
